# ros_ws

ros_ws/src/quadped_desc/: package.xml  setup.py
ros_ws/src/quadped_desc/launch/: display.launch.py  gazebo.launch.py
ros_ws/src/quadped_desc/meshes/: _hip_aa_module.stl  _lower_leg.stl  battery_xcube_850mAh_3S1P.stl  bearing_25_20_4_sbn_ET25202ZVA.stl  bearing_32_25_4_sbn_61705RS.stl  bearing_7_3_3_sbn_683_2ZVA.stl  bearing_8_4_2_sbn_MR84VA.stl  body_structure_bottom_rev_a.stl  body_structure_center.stl  body_structure_center_payload.stl  body_structure_front_batterie (1).stl  body_structure_front_batterie.stl  body_structure_front_batterie_lid.stl  body_structure_hip_aa_support (1).stl  body_structure_hip_aa_support.stl  body_structure_side (1).stl  body_structure_side.stl  body_structure_top_imu_leds (1).stl  body_structure_top_imu_leds.stl  body_structure_top_master_power_board (1).stl  body_structure_top_master_power_board.stl  e_stop_switch.stl  encoder.stl  encoder_avago_aedt_9810.stl  encoder_codewheel_5000cpr_pwb_7mm.stl  encoder_codewheel_pwb_mount.stl  fastener_fhs_m3_10.stl  (+58 more)
ros_ws/src/quadped_urdf/: package.xml  setup.cfg  setup.py
ros_ws/src/quadped_urdf/config/: joint_names_Quadped_URDF.yaml  ros_gz_bridge_gazebo.yaml
ros_ws/src/quadped_urdf/launch/: display.launch.py  gazebo.launch.py
ros_ws/src/quadped_urdf/meshes/: fe_1.STL  fe_2.STL  fe_3.STL  fe_4.STL  lower_1.STL  lower_2.STL  lower_3.STL  lower_4.STL  upper_1.STL  upper_2.STL  upper_3.STL  upper_4.STL
ros_ws/src/quadped_urdf/urdf/: Quadped_URDF.csv  Quadped_URDF.urdf  quadped_converted.sdf
(+4 files in other folders)
